# tivo

./: Makefile  Python.mk  README.md  emulator.py  prompt  pyproject.toml
tests/: test_cli.py  test_tivo.py
tivo/: __init__.py  __main__.py  cli.py  cmd.py  core.py  device.py  remote.py  ui.py
tivo/commands/: __init__.py  downch.py  emulator.py  getch.py  list.py  setch.py  upch.py
